Added DOIs and URLs to the references.

--- a/refs.bib
+++ b/refs.bib
@@ -21,7 +21,7 @@
   author        = "Hans Meuer and Erich Strohmaier and Jack Dongarra and Horst Simon",
   title         = "{Top 500 List of Supercomputer Sites}",
   year          = "2020",
-  note          = "\url{http://www.top500.org}"
+  url           = "\url{http://www.top500.org}"
 }
 
 @article{Cox1972,
@@ -46,7 +46,8 @@
   address       = "Cham",
   pages         = "475--519",
   isbn          = "978-3-319-19425-7",
-  doi           = "10.1007/978-3-319-19425-7_20"
+  doi           = "10.1007/978-3-319-19425-7_20",
+  url           = "https://doi.org/10.1007/978-3-319-19425-7\_20"
 }
 
 @conference{nie17characterizing,
@@ -71,7 +72,8 @@
                    Alamitos, CA, USA}",
   issn          = "2375-0227",
   isbn          = "978-1-5386-2764-8",
-  doi           = "10.1109/MASCOTS.2017.12"
+  doi           = "10.1109/MASCOTS.2017.12",
+  url           = "https://doi.org/10.1109/MASCOTS.2017.120"
 }
 
 @conference{nie18machine,
@@ -95,7 +97,8 @@
                    Alamitos, CA, USA}",
   issn          = "2158-3927",
   isbn          = "978-1-5386-5596-2",
-  doi           = "10.1109/DSN.2018.00022"
+  doi           = "10.1109/DSN.2018.00022",
+  url           = "https://doi.org/10.1109/DSN.2018.00022"
 }
 
 @conference{kumar18understanding,
@@ -120,7 +123,8 @@
                    Alamitos, CA, USA}",
   issn          = "2158-3927",
   isbn          = "978-1-5386-5596-2",
-  doi           = "10.1109/DSN.2018.00023"
+  doi           = "10.1109/DSN.2018.00023",
+  url           = "https://doi.org/10.1109/DSN.2018.00023"
 }
 
 @conference{gupta17failures,
@@ -140,7 +144,8 @@
   address       = "Denver, CO, USA",
   publisher     = "\href{http://www.acm.org}{ACM Press, New York, NY, USA}",
   isbn          = "978-1-4503-5114-0",
-  doi           = "10.1145/3126908.3126937"
+  doi           = "10.1145/3126908.3126937",
+  url           = "https://doi.org/10.1145/3126908.3126937"
 }
 
 @conference{bautista-gomez16reducing,
@@ -164,7 +169,8 @@
   publisher     = "\href{http://www.computer.org}{IEEE Computer Society, Los
                    Alamitos, CA, USA}",
   issn          = "1530-2075",
-  doi           = "10.1109/IPDPS.2016.100"
+  doi           = "10.1109/IPDPS.2016.100",
+  url           = "https://doi.org/110.1109/IPDPS.2016.100"
 }
 
 @Article{lubridate,
@@ -187,7 +193,8 @@
   pages     = {331-342}, 
   doi       = {10.1109/HPCA.2015.7056044}, 
   ISSN      = {2378-203X},
-  address   = {San Francisco, CA, USA}
+  address   = {San Francisco, CA, USA},
+  url       = {https://doi.org/10.1109/HPCA.2015.7056044}
 }
 
 @INPROCEEDINGS{8665764,
@@ -200,7 +207,8 @@
   pages     = {83-93},
   doi       = {10.1109/SC.2018.00010}, 
   ISSN      = {null},
-  address   = {Dallas, TX, USA}
+  address   = {Dallas, TX, USA},
+  url       = {https://doi.org/10.1109/SC.2018.00010}
 }
 
 @INPROCEEDINGS{6903564,
@@ -212,7 +220,8 @@
   pages     = {25-36},
   doi       = {10.1109/DSN.2014.101}, 
   ISSN      = {2158-3927},
-  address   = {Atlanta, GA, USA}
+  address   = {Atlanta, GA, USA},
+  url       = {https://doi.org/10.1109/DSN.2014.101}
 }
 
 @INPROCEEDINGS{8809553,
@@ -224,7 +233,8 @@
   doi       = {10.1109/DSN.2019.00055}, 
   ISSN      = {1530-0889},
   month     = jun # "~24-27, ",
-  address   = {Portland, OR, USA}
+  address   = {Portland, OR, USA},
+  url       = {https://doi.org/10.1109/DSN.2019.00055}
 }
 
 @INPROCEEDINGS{6903615, 
@@ -236,7 +246,8 @@
   pages     = {610-621}, 
   doi       = {10.1109/DSN.2014.62}, 
   ISSN      = {2158-3927},
-  address   = {Atlanta, GA, USA}
+  address   = {Atlanta, GA, USA},
+  url       = {https://doi.org/10.1109/DSN.2014.62}
 }
 
 @inproceedings{10.1145/2807591.2807666,
@@ -245,11 +256,11 @@
   year      = {2015},
   isbn      = {9781450337236},
   publisher = {Association for Computing Machinery},
-  url       = {https://doi.org/10.1145/2807591.2807666},
   doi       = {10.1145/2807591.2807666},
   booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC) 2015},
   numpages  = {12},
-  address   = {Austin, TX, USA}
+  address   = {Austin, TX, USA},
+  url       = {https://doi.org/10.1145/2807591.2807666}
 }
 
 @inproceedings{osti_1086655,
@@ -268,7 +279,9 @@
   year      = {2016},
   month     = mar # "~12-16, ",
   pages     = {519-530},
-  address   = {Barcelona, Spain}
+  address   = {Barcelona, Spain},
+  doi       = {10.1109/HPCA.2016.7446091},
+  url       = {https://doi.org/10.1109/HPCA.2016.7446091}  
 }
 
 @INPROCEEDINGS{7266836,
@@ -278,7 +291,9 @@
   year      = {2015},
   month     = jun # "~22-25, ",
   pages     = {37-44},
-  address   = {Rio de Janeiro, Brazil}
+  address   = {Rio de Janeiro, Brazil},
+  doi       = {10.1109/DSN.2015.52},
+  url       = {https://doi.org/10.1109/DSN.2015.52}  
 }
 
 @inproceedings{Meneses15Analyzing,
