--- a/refs.bib
+++ b/refs.bib
@@ -12,7 +12,7 @@
 
 @misc{olcf:summit,
   author        = "{Oak Ridge Leadership Computing Facility}",
-  title         = "{Titan supercomputer}",
+  title         = "{Summit supercomputer}",
   year          = "2020",
   url           = "https://www.olcf.ornl.gov/olcf-resources/compute-systems/summit/"
 }
