--- a/refs.bib
+++ b/refs.bib
@@ -183,13 +183,18 @@
   pages   = {1--25},
   url     = {http://www.jstatsoft.org/v40/i03/},
 }
+
 @article{Ostrouchov88,
-	Author = {George Ostrouchov and W. Q. {Meeker, Jr.}},
-	Journal = JSCS,
-	Pages = {43-76},
-	Title = {Accuracy of approximate confidence bounds computed from          interval censored {Weibull} and log-normal data},
-	Volume = {29},
-	Year = {1988}}
+  author  = {George Ostrouchov and W. Q. {Meeker, Jr.}},
+  journal = {Journal of Statistical Computation and Simulation},
+  pages   = {43-76},
+  title   = {Accuracy of approximate confidence bounds computed from interval censored {Weibull} and log-normal data},
+  volume  = {29},
+  number  = {1},
+  year    = {1988},
+  doi     = {10.1080/00949658808811050},
+  url     = {https://doi.org/10.1080/00949658808811050}
+}
 
 @INPROCEEDINGS{7056044,
   author    = {D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
