--- a/survival.tex
+++ b/survival.tex
@@ -81,7 +81,7 @@ blades are placed vertically within the cabinet, pairs of nodes too
 experience the same relationship with distance to the bottom, nodes 2
 and 3 having lower failure rates than nodes 0 and 1.
 
-Very few failures have occurred in the new batch and they are clarly
+Very few failures have occurred in the new batch and they are clearly
 less prone to failure at the 2.5 year mark. There is a slight change
 at the 3 year mark of cages 1 and 2 but it is also accompanied with a
 rise in uncertainty and survival is still well above levels in the old
@@ -143,7 +143,7 @@ uncertainty, which too is most reliably computed on a log scale (see,
 for example, \cite{Ostrouchov88}). In the figures, we also include the
 number of units, N, at risk and the number of events that occurred in
 each category. All the factors ({\em col, row, cage, slot, node}) are
-balanced with respect to the nunber of units at risk and consequently
+balanced with respect to the number of units at risk and consequently
 nearly orthogonal (each level of a factor contains all levels of the
 other factors) providing an almost ``designed'' experiment nature to
 this analysis.
@@ -157,5 +157,5 @@ hazard ratio on cage 2, which is consistent with lowest survivals in
 the KM analysis earlier. Its ratio value near 20 has to be interpreted
 with caution because it is a time averaged value on a log scale. This
 aspect is not captured by the uncertainty, which accounts for the
-randomnes of the failures and not for the geometric time averaging
+randomness of the failures and not for the geometric time averaging
 \cite{coxhazardinterpret}.
