--- a/refs.bib
+++ b/refs.bib
@@ -196,6 +196,20 @@
   url     = {https://doi.org/10.1080/00949658808811050}
 }
 
+@article{bender2019,
+  author =	 {Bender, Andreas and Scheipl, Fabian and Hartl,
+                  Wolfgang and Day, Andrew G and Küchenhoff, Helmut},
+  title =	 "{Penalized estimation of complex, non-linear
+                  exposure-lag-response associations}",
+  journal =	 {Biostatistics},
+  volume =	 {20},
+  number =	 {2},
+  pages =	 {315-331},
+  year =	 {2019},
+  month =	 {02},
+  url =		 {https://doi.org/10.1093/biostatistics/kxy003},
+}
+
 @INPROCEEDINGS{7056044,
   author    = {D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
   booktitle = {IEEE 21st International Symposium on High Performance Computer Architecture (HPCA) 2015}, 
