--- a/refs.bib
+++ b/refs.bib
@@ -178,6 +178,7 @@
   author  = {Garrett Grolemund and Hadley Wickham},
   journal = {Journal of Statistical Software},
   year    = {2011},
+  month   = apr,
   volume  = {40},
   number  = {3},
   pages   = {1--25},
@@ -192,22 +193,22 @@
   volume  = {29},
   number  = {1},
   year    = {1988},
+  month   = may,
   doi     = {10.1080/00949658808811050},
   url     = {https://doi.org/10.1080/00949658808811050}
 }
 
 @article{bender2019,
-  author =	 {Bender, Andreas and Scheipl, Fabian and Hartl,
-                  Wolfgang and Day, Andrew G and Küchenhoff, Helmut},
-  title =	 "{Penalized estimation of complex, non-linear
-                  exposure-lag-response associations}",
-  journal =	 {Biostatistics},
-  volume =	 {20},
-  number =	 {2},
-  pages =	 {315-331},
-  year =	 {2019},
-  month =	 {02},
-  url =		 {https://doi.org/10.1093/biostatistics/kxy003},
+  author   = {Bender, Andreas and Scheipl, Fabian and Hartl, Wolfgang and Day, Andrew G and K{\"u}chenhoff, Helmut},
+  title    = {Penalized estimation of complex, non-linear exposure-lag-response associations},
+  journal  = {Biostatistics},
+  volume   = {20},
+  number   = {2},
+  pages    = {315-331},
+  year     = {2019},
+  month    = apr,
+  doi      = {doi.org/10.1093/biostatistics/kxy003},
+  url      = {https://doi.org/10.1093/biostatistics/kxy003}
 }
 
 @INPROCEEDINGS{7056044,
