--- a/intro.tex
+++ b/intro.tex
@@ -4,7 +4,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 \label{section:introduction}
-
 The Cray XK7 Titan supercomputer~\cite{olcf:titan} was the \#1 system in the world for a
 very long time~\cite{top500list}, and has remained a critically important computer
 system through the end of its life in the Summer of 2019. It defied
@@ -22,18 +21,18 @@ that includes this last rework cycle. This includes Titan's most
 stable and failure free period and contains the most reliable data on
 GPU operation.
 
+\begin{figure*}[tb]
+  \centering
+  \includegraphics[width=\textwidth]{figs/chronology001.pdf}
+  \caption{Volume of GPU swaps detected on Titan at inventories. Our
+    analysis begins with units in place by 2014. A break-in period
+    before 2014 involved working out mechanical assembly issues at
+    PCIe connectors.}
+  \label{fig:chronology}
+\end{figure*}
 Figure~\ref{fig:chronology} illustrates the chronology of the rework
 cycles and stable periods as indicated by the number of GPU changes at
 periodic inventories.
-\begin{figure*}[tbp]
-  \centering
-  \includegraphics[width=\textwidth]{figs/chronology001.pdf}
-  \caption{Volume of GPU swaps detected at inventories. The break-in
-    period before 2014 involved working out mechanical assembly issues
-    at PCIe connectors
-    frequent dates.}
-  \label{fig:chronology}
-\end{figure*}
 The first two rework cycles before 2014 can be characterized as a
 break-in period on a new system that is first of its kind and pushes
 many technological boundaries, in this case mainly regarding blade
