--- a/abstract.tex
+++ b/abstract.tex
@@ -8,13 +8,15 @@ very long time and remained critically important throughout its nearly
 seven year life. It was also a very interesting machine from a
 reliability viewpoint as most of its power came from 18,688 GPUs whose
 operation was forced to execute three very significant rework cycles,
-two on the mechanical assembly and one on the GPUs. We write about the
-last rework cycle and a reliability analysis of over 100,000 operation
-years in the GPU lifetimes. Using statistical survival analysis
-techniques, we find that GPU reliability is dependent on heat
+two on the GPU mechanical assembly and one on the GPU circuitboards. We
+write about the last rework cycle and a reliability analysis of over
+100,000 operation years in the GPU lifetimes, which correspond to
+Titan's 6 year long productive period after an initial break-in
+period. Using time between failures analysis and statistical survival
+analysis techniques, we find that GPU reliability is dependent on heat
 dissipation to an extent that strongly correlates with detailed
 nuances of the system cooling architecture. In addition to describing
 some of the system history, the data collection, data cleaning, and
 our analysis of the data, we provide reliability recommendations for
 designing future state of the art supercomputing systems and their
-operation.
+operation. We make the data and our analysis codes publicly available.
